changed behavior of text box

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -17,16 +17,15 @@
      <h1>Lunch Checker</h1>
 
          <div class="form-group">
-             <input id="lunch-menu" type="text" ng-model="lunchList"
+             <input id="lunch-menu" type="text" ng-model="lunchList" ng-keyup="clear();"
              placeholder="list comma separated dishes you usually have for lunch"
-             class="form-control">
+             class="form-control {{textBoxStyle}}">
          </div>
          <div class="form-group">
              <button class="btn btn-default" ng-click="giveFeedback()">Check If Too Much</button>
          </div>
          <div class="form-group message">
-           <span class="not-empty" ng-show="showMessage">{{message}}</span>
-           <span class="empty" ng-show="showWarning">{{message}}</span>
+           <span class="{{mgsStyle}}">{{message}}</span>
          </div>
    </div>
 
